Made id on html

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
         </ul>
     </div>
     <div>
-        <button type="button" class="btn btn-outline-info">Scrape Articles</button>
+        <button type="button" class="btn btn-outline-info " id="scrape">Scrape Articles</button>
 
-        <button type="button" class="btn btn-outline-info">Clear Articles</button>
+        <button type="button" class="btn btn-outline-info" id="clear">Clear Articles</button>
     </div>
 </nav>
 
